[tool.poetry]
name = "pycounts_tf"
version = "0.0.1"
description = "calculate word counts in a text file!"
authors = ["Tarek"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
